--- a/src/feedback-webapp/src/components/ServiceClusters.css
+++ b/src/feedback-webapp/src/components/ServiceClusters.css
@@ -1,5 +1,5 @@
 .service-clusters {
-  max-width: 1200px;
+  max-width: 1500px;
   margin: 0 auto;
   padding: 20px;
   font-family: Arial, sans-serif;
@@ -66,7 +66,8 @@
 .pagination-button, .carousel-button {
   padding: 10px 20px;
   font-size: 16px;
-  background-color: #4CAF50;
+  /* background-color: #4CAF50; */
+  background-color: #4cafaf;
   color: white;
   border: none;
   cursor: pointer;
@@ -79,7 +80,7 @@
 }
 
 .pagination-button:hover:not(:disabled), .carousel-button:hover:not(:disabled) {
-  background-color: #45a049;
+  background-color:  #4cafaf;
 }
 
 .back-button {
@@ -90,6 +91,29 @@
   border: none;
   cursor: pointer;
   border-radius: 4px;
+  margin-top: 20px;
+  margin-left: 822px; 
+}
+
+.theme-analysis-button {
+  padding: 10px 20px;
+  font-size: 20px;
+  background-color: #4CAF50;;
+  color: white;
+  border: none;
+  cursor: pointer;
+  border-radius: 12px;
+  margin-top: 20px;
+}
+
+.issue-analysis-button {
+  padding: 10px 20px;
+  font-size: 20px;
+  background-color: #4CAF50;;
+  color: white;
+  border: none;
+  cursor: pointer;
+  border-radius: 12px;
   margin-top: 20px;
 }
 
